# SlicerEVARSim

./: .gitignore  CMakeLists.txt  README.md  analyze_vtk.py  analyze_vtk_detailed.py  branch_selector_implementation.py  centerline_analysis.py  final_branch_analysis.py  vtk_summary_report.py
EVARSim/: CL_model.vtk  CMakeLists.txt  EVARSim.py
EVARSim/Resources/UI/: EVARSim.ui
Test/: CMakeLists.txt  Test.py
Test/Resources/UI/: Test.ui
